# serializer version: 1
# name: test_no_favicon_warning_snapshot
  '<p><a href="https://its.umich.edu/computing/web-mobile/cloudflare/getting-started">Put this site behind Cloudflare</a> or add a <a href="https://en.wikipedia.org/wiki/Favicon"><code>/code/favicon.ico</code> file</a> to lower Pantheon visitor numbers and increase the site\'s traffic capacity.</p>'
# ---
# name: test_no_favicon_warning_snapshot.1
  '''
  Put this site behind Cloudflare
  <https://its.umich.edu/computing/web-mobile/cloudflare/getting-started>
  or add a /code/favicon.ico file
  <https://en.wikipedia.org/wiki/Favicon>
  to lower Pantheon visitor numbers and increase the amount of traffic the site can handle at any time.
  '''
# ---
# name: test_no_favicon_warning_snapshot.2
  'add favicon.ico file'
# ---
# name: test_ocp_alert_snapshot
  '<p>Please <a href="https://docs.pantheon.io/release-notes/2025/10/updated-ocp-config">fix this site\'s Object Cache Pro configuration</a>.</p>'
# ---
# name: test_ocp_alert_snapshot.1
  "Please fix this site's Object Cache Pro configuration: https://docs.pantheon.io/release-notes/2025/10/updated-ocp-config"
# ---
# name: test_ocp_alert_snapshot.2
  'Fix Object Cache Pro configuration'
# ---
# name: test_papc_builder_multiple_installed_snapshot
  '<p>The <a href="https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin">Pantheon Advanced Page Cache</a> WordPress plugin is installed multiple times.</p>'
# ---
# name: test_papc_builder_multiple_installed_snapshot.1
  '''
  The Pantheon Advanced Page Cache WordPress plugin
  <https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin>
  is installed multiple times.
  '''
# ---
# name: test_papc_builder_multiple_installed_snapshot.2
  'plugin pantheon-advanced-page-cache installed multiple times'
# ---
# name: test_papc_builder_not_installed_snapshot
  '<p>The <a href="https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin">Pantheon Advanced Page Cache</a> WordPress plugin needs to be installed:</p><p>Needed for automatically clearing Pantheon&#x27;s caches (not Cloudflare&#x27;s) when content is updated.</p>'
# ---
# name: test_papc_builder_not_installed_snapshot.1
  '''
  The Pantheon Advanced Page Cache WordPress plugin
  <https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin>
  needs to be installed: Needed for automatically clearing Pantheon's caches (not Cloudflare's) when content is updated.
  '''
# ---
# name: test_papc_builder_not_installed_snapshot.2
  'install the pantheon-advanced-page-cache plugin'
# ---
# name: test_papc_builder_turned_off_snapshot
  '<p>The <a href="https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin">Pantheon Advanced Page Cache</a> WordPress plugin needs to be activated:</p><p>Needed for automatically clearing Pantheon&#x27;s caches (not Cloudflare&#x27;s) when content is updated.</p>'
# ---
# name: test_papc_builder_turned_off_snapshot.1
  '''
  The Pantheon Advanced Page Cache WordPress plugin
  <https://docs.pantheon.io/guides/wordpress-configurations/wordpress-cache-plugin>
  needs to be activated: Needed for automatically clearing Pantheon's caches (not Cloudflare's) when content is updated.
  '''
# ---
# name: test_papc_builder_turned_off_snapshot.2
  'activate plugin pantheon-advanced-page-cache'
# ---
